--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
     top: 300px;
     position:relative;
     display: flex;
-    float: left;
+    flex-direction: column;
 }
 .bott{
     font-style:italic;
